# random-quotes-generator

./: CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  QUICK_START.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: API.md  CONTRIBUTING.md  EXAMPLES.md  INSTALLATION.md  PROJECT_OVERVIEW.md
examples/: __init__.py  advanced_usage.py  basic_usage.py
quotes_generator/: __init__.py  __main__.py  formatter.py  generator.py
quotes_generator/data/: quotes.json
tests/: __init__.py  test_formatter.py  test_generator.py
